# ai-zunda

./: .gitignore  README.md  pyproject.toml  start.bat
ai_zunda/: __main__.py  config.py  db.py  llm.py  stt.py  tts.py
ai_zunda/cogs/: voice.py
